Bug 1593752 - When inserting canonical <body> element, reframe root element only if their used WritingModes are different. r=emilio a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D51889